--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import "tailwindcss";
+@import "./App.css";
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -23,9 +25,14 @@ a:hover {
 }
 
 body {
+  height: 100%;
+  width: 100%;
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   display: flex;
-  place-items: center;
+  justify-content: center;
+  align-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -38,7 +45,7 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 4px 10px;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
